2002-10-21  Duncan Mak  <duncan@ximian.com>

	* XmlTextReaderTests.cs:
	* XmlElementTests.cs:
	* XmlDocumentTests.cs: Patches from Atsushi Enomoto
	<ginga@kit.hi-ho.ne.jp>.

2002-10-18  Duncan Mak  <duncan@ximian.com>

	* XmlDocumentTests.cs: Apply a patch from Atsushi Enomoto
	<ginga@kit.hi-ho.ne.jp>.

2002-09-29  Nick Drochak  <ndrochak@gol.com>

	* XmlTextReaderTest.cs (AssertEndDocument): Add messages for Asserts()
	so we can tell where this is failing.

2002-09-19  Matt Hunter <mahunter@tconl.com>

	* XmlElementTests.cs: Test for SetAttributeNode(localName, namespaceURI) added.
	* XmlAttributeCollectionTests.cs: added TestAppend().

2002-09-17  Kral Ferch <kral_ferch@hotmail.com>

	* XPathNavigatorEvaluateTests.cs: Tests for string(), concat(),
	starts-with(), and contains().
	
2002-09-12  Piers Haken <piersh@friskit.com>

	* XPathNavigatorEvaluateTests.cs: enable string() tests.

2002-09-12  Piers Haken <piersh@friskit.com>

	* XPathNavigatorEvaluateTests.cs: enable last() & count() tests.

2002-09-11  Kral Ferch <kral_ferch@hotmail.com>

	* XPathNavigatorEvaluateTests.cs:  Added tests for
	local-name, namespace-uri, and string.

2002-09-11  Kral Ferch <kral_ferch@hotmail.com>

	* Added XPathNavigatorEvaluateTests.cs file to 
	the MonoMicro.Test project.

	* XPathNavigatorEvaluateTests.cs: New file. 

	* AllTests.cs: Added XPathNavigatorEvaluateTests suite.

	* XmlDocumentTests: Added space between namespace decls in
	TestGetElementsByTagNameUsingNameSpace.  Was causing error
	when testing against Microsoft assembly.
	
	* XmlElementTests: Added space between namespace decls in
	TestGetElementsByTagNameUsingNameSpace.  Was causing error
	when testing against Microsoft assembly.

2002-09-06  Kral Ferch <kral_ferch@hotmail.com>

	* Added XPathNavigatorMatchesTests.cs file to 
	the MonoMicro.Test project.
	
2002-08-22  Jason Diamond <jason@injektilo.org>

	* AllTests.cs, System.XML_linux_test.args, 