@@ -1,3 +1,7 @@
+2002-10-22  Nick Drochak  <ndrochak@gol.com>
+
+	* XmlTextWriterTests.cs: Null is ok when prefix is "xmlns".
+
 2002-10-21  Duncan Mak  <duncan@ximian.com>
 
 	* XmlTextReaderTests.cs:
